grpc-pod.yml
apiVersion: v1
kind: Pod
metadata: 
  name: grpc-pod
  labels:
    app: grpc-service
spec:

  restartPolicy: Always
  volumes:
  - name: postgres-init-volume
    hostPath:
      path: /grpc-laba

  containers:  
    - image: postgres:14
      name: postgres
      ports:
        - containerPort: 5432
      resources: {}
      volumeMounts:
        - mountPath: /docker-entrypoint-initdb.d/init.sql
          name: postgres-claim
    
    - image: docker.io/teledima/grpc-server:v1
      name: grpc-server
      ports:
        - containerPort: 5001
