grpc-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server-deployment
  labels:
    app: grpc-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: grpc-server
  template:
    metadata:
      labels:
        app: grpc-server
    spec:
      containers:
        - image: docker.io/teledima/grpc-server:v2.1
          name: grpc-server
          ports:
            - containerPort: 5001
