grpc-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: grpc-service
spec:
  selector:
    app: grpc-server
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
