grpc-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\Application\Kompose\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    app: grpc-server
  name: grpc-server
  namespace: grpc-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: D:\Application\Kompose\kompose.exe convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        app: grpc-server
    spec:
      containers:
        - image: docker.io/teledima/grpc-server:v1
          name: grpc-server
          ports:
            - containerPort: 5001
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\Application\Kompose\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    app: grpc-server
  name: grpc-server
  namespace: grpc-namespace
spec:
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  selector:
    app: grpc-server
status:
  loadBalancer: {}
