postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\Application\Kompose\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    app: postgres
  name: postgres
  namespace: grpc-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: D:\Application\Kompose\kompose.exe convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        app: postgres
    spec:
      containers:
        - image: postgres:14
          name: postgres
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d/init.sql
              name: postgres-claim
      restartPolicy: Always
      volumes:
        - name: postgres-claim
          persistentVolumeClaim:
            claimName: postgres-claim
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\Application\Kompose\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    app: postgres
  name: postgres
  namespace: grpc-namespace
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
status:
  loadBalancer: {}
